fix(site): fix scaling viewport and body overflow

--- a/packages/site/app.css
+++ b/packages/site/app.css
@@ -32,7 +32,6 @@ body {
 
 body {
   margin: 0;
-  overflow: hidden;
 }
 
 * {
